Added skeleton of controller + very small tests tweaks